--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
        <div class="container">
           <div class="row">
              <div class="col-6">
-               <img src="IMG_20240509_183809.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+               <img src="Messenger_creation_1108047910442321.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
                <button class="btn btn-primary" type="button"> Like </button>
              </div>
             <div class="col-6">
-               <img src="IMG_20240513_211129.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+               <img src="" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
                <button class="btn btn-primary" type="button"> Like </button>
             </div>
             </div>
