--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                <button class="btn btn-primary" type="button"> Like </button>
              </div>
             <div class="col-6">
-               <img src="" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+               <img src="received_396844902890182.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
                <button class="btn btn-primary" type="button"> Like </button>
             </div>
             </div>
