--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
        <div class="container">
           <div class="row">
              <div class="col-6">
-               <img src="Messenger_creation_1108047910442321.jpeg" class="img-thumbnail" style="width:500px;height:300px;"/> <br>
-               <button class="btn btn-primary" type="button"> Like </button>
+               <img src="Messenger_creation_1108047910442321.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+               <button class="btn btn-primary" type=button id="btnLike1"> Like </button>
+               <output id="countLike1">0</output>
              </div>
-            <div class="col-6">
-               <img src="received_396844902890182.jpeg" class="img-thumbnail" style="width:500px;height:300px;"/> <br>
-               <button class="btn btn-primary" type="button"> Like </button>
-            </div>
-           </div>
+             <div class="col-6">
+               <img src="received_396844902890182.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+               <button class="btn btn-primary" type=button id="btnLike2"> Like </button>
+               <output id="countLike2">0</output>
+             </div>
+          </div>
        </div>
-        </body>
+      <script src="index.js"></script>
+   </body>
 </html>
