--- a/index.html
+++ b/index.html
@@ -7,18 +7,27 @@
    <body> 
        <div class="container">
           <div class="row">
-             <div class="col-6">
-               <img src="Messenger_creation_1108047910442321.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
-               <button class="btn btn-primary" type=button id="btnLike1"> Like </button>
-               <output id="countLike1">0</output>
+             <div class="col-5">
+               <img src ="IMG_20231117_130824_642.webp" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+               <button class="btn btn-primary" type="button" id="btnLike1" > Like </button>
+               <output id="countLikes1"> 0 </output>
              </div>
-             <div class="col-6">
-               <img src="received_396844902890182.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
-               <button class="btn btn-primary" type=button id="btnLike2"> Like </button>
-               <output id="countLike2">0</output>
+            <div class="col-4">
+               <img src="IMG_20230218_105128_727.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+               <button class="btn btn-primary" type="button" id="btnLike2" > Like </button>
+               <output id="countLikes2"> 0 </output>
              </div>
+            <div class="col-4"> Comments<br>
+
+<input class="form-control" type="text" id="comment"/>
+
+<button class="btn btn-success" id="submit">Submit</button>
+
+<textarea class="form-control" id="commentbox" rows="20"></textarea>
+
+            </div>
           </div>
        </div>
-      <script src="index.js"></script>
+      <script src="index.js"> </script>
    </body>
 </html>
