--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
        <div class="container">
           <div class="row">
              <div class="col-5">
-               <img src ="IMG_20231117_130824_642.webp" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+               <img src ="Messenger_creation_1108047910442321.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
                <button class="btn btn-primary" type="button" id="btnLike1" > Like </button>
                <output id="countLikes1"> 0 </output>
              </div>
