--- a/index.html
+++ b/index.html
@@ -7,25 +7,23 @@
    <body> 
        <div class="container">
           <div class="row">
-             <div class="col-5">
-               <img src ="Messenger_creation_1108047910442321.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
-               <button class="btn btn-primary" type="button" id="btnLike1" > Like </button>
-               <output id="countLikes1"> 0 </output>
+             <div class="col-6">
+               <img src="FB_IMG_17166222843059710.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+               <button class="btn btn-primary" type="button" id="btnLike1"> Like </button>
+                <output id="countLikes1">0</output>
              </div>
-            <div class="col-4">
-               <img src="received_396844902890182.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
-               <button class="btn btn-primary" type="button" id="btnLike2" > Like </button>
-               <output id="countLikes2"> 0 </output>
+             <div class="col-6">
+               <img src="Screenshot_20240306_142722.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+               <button class="btn btn-primary" type="button" id="btnLike2"> Like </button>
+                <output id="countLikes2">0</output>
              </div>
-            <div class="col-4"> Comments<br>
+             <div class="col-4"> Comments<br>
 
-<input class="form-control" type="text" id="comment"/>
+<input type="text" class="form-control" id="comment"/>
 
 <button class="btn btn-success" id="submit">Submit</button>
 
-<textarea class="form-control" id="commentbox" rows="20"></textarea>
-
-            </div>
+<textarea class="form-control" id="commentbox" rows="24"></textarea>pi
           </div>
        </div>
       <script src="index.js"> </script>
