--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <button class="btn btn-success" id="submit">Submit</button>
 
-<textarea class="form-control" id="commentbox" rows="24"></textarea>pi
+<textarea class="form-control" id="commentbox" rows="24"></textarea>
           </div>
        </div>
       <script src="index.js"> </script>
