--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-   <title> My Homepage </title>
-   <head>
+<head>
+   <title> Jero alyas Pogi </title>
+</head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
    </head>
@@ -8,14 +9,33 @@
        <div class="container">
           <div class="row">
              <div class="col-4">
-               <img src="Messenger_creation_1108047910442321.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
-               <button class="btn btn-primary" type="button" id="btnLike1"> Like </button>
+               <img src="IMG_20231007_231208.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+               <button class="btn btn-primary" type="button" id="btnLike1"> 👍🏻Like </button>
                 <output id="countLikes1">0</output>
+                <button class="btn btn-outline-danger" type="button" id="btnDislike1"> 👎🏻Dislike </button>
+        <output id="countDislikes1"> 0 </output>
+        <button class="btn btn-outline-warning" type="button" id="btnHaha1"> 😂HAHA </button>
+        <output id="countHaha1"> 0 </output>
+        <button class="btn btn-outline-danger" 
+        <button class="btn btn-outline-danger" type="button" id="btncare1"> 🥰care</button>
+        <output id="countcare1"> 0 </output>
+                <button class="btn btn-outline-warning" type="button" id="btnangry1"> 😡angry </button>
+        <output id="countangry1"> 0 </output>
              </div>
              <div class="col-4">
-               <img src="received_396844902890182.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
-               <button class="btn btn-primary" type="button" id="btnLike2"> Like </button>
+               <img src="IMG_20240418_163937.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+               <button class="btn btn-primary" type="button" id="btnLike2"> 👍🏻Like </button>
                 <output id="countLikes2">0</output>
+                <button class="btn btn-outline-danger" type="button" id="btnDislike2"> 👎🏻Dislike </button>
+        <output id="countDislikes2"> 0 </output>
+        <button class="btn btn-outline-warning" type="button" id="btnHaha2"> 😂HAHA </button>
+        <output id="countHaha2"> 0 </output> 
+        <button class="btn btn-outline-danger" 
+        <button class="btn btn-outline-danger"
+         type="button" id="btncare2"> 🥰care </button>
+        <output id="countcare2"> 0 </output>
+               <button class="btn btn-outline-warning" type="button" id="btnangry2"> 😡angry </button>
+        <output id="countangry2"> 0 </output>
              </div>
              <div class="col-4"> Comments<br>
 
@@ -24,6 +44,8 @@
 <button class="btn btn-success" id="submit">Submit</button>
 
 <textarea class="form-control" id="commentbox" rows="24"></textarea>
+
+             </div>
           </div>
        </div>
       <script src="index.js"> </script>
