--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
        <div class="container">
           <div class="row">
              <div class="col-4">
-               <img src="IMG_20231007_231208.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+               <img src="received_396844902890182.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
                <button class="btn btn-primary" type="button" id="btnLike1"> 👍🏻Like </button>
                 <output id="countLikes1">0</output>
                 <button class="btn btn-outline-danger" type="button" id="btnDislike1"> 👎🏻Dislike </button>
@@ -23,7 +23,7 @@
         <output id="countangry1"> 0 </output>
              </div>
              <div class="col-4">
-               <img src="IMG_20240418_163937.jpg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
+               <img src="Messenger_creation_1108047910442321.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
                <button class="btn btn-primary" type="button" id="btnLike2"> 👍🏻Like </button>
                 <output id="countLikes2">0</output>
                 <button class="btn btn-outline-danger" type="button" id="btnDislike2"> 👎🏻Dislike </button>
