--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
           <div class="row">
              <div class="col-4">
                <img src="received_396844902890182.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
-               <button class="btn btn-primary" type="button" id="btnLike1"> 👍🏻Like </button>
+               <button class="btn btn-primary" type="button" id="btnLike1"> Like </button>
                 <output id="countLikes1">0</output>
-                <button class="btn btn-outline-danger" type="button" id="btnDislike1"> 👎🏻Dislike </button>
+                <button class="btn btn-outline-danger" type="button" id="btnDislike1"> Dislike </button>
         <output id="countDislikes1"> 0 </output>
-        <button class="btn btn-outline-warning" type="button" id="btnHaha1"> 😂HAHA </button>
+        <button class="btn btn-outline-warning" type="button" id="btnHaha1"></button>
         <output id="countHaha1"> 0 </output>
         <button class="btn btn-outline-danger" 
-        <button class="btn btn-outline-danger" type="button" id="btncare1"> 🥰care</button>
+        <button class="btn btn-outline-danger" type="button" id="btncare1"></button>
         <output id="countcare1"> 0 </output>
-                <button class="btn btn-outline-warning" type="button" id="btnangry1"> 😡angry </button>
+                <button class="btn btn-outline-warning" type="button" id="btnangry1"></button>
         <output id="countangry1"> 0 </output>
              </div>
              <div class="col-4">
                <img src="Messenger_creation_1108047910442321.jpeg" class="img-thumbnail" style="width:400px;height:500px;"/> <br>
-               <button class="btn btn-primary" type="button" id="btnLike2"> 👍🏻Like </button>
+               <button class="btn btn-primary" type="button" id="btnLike2"> Like </button>
                 <output id="countLikes2">0</output>
-                <button class="btn btn-outline-danger" type="button" id="btnDislike2"> 👎🏻Dislike </button>
+                <button class="btn btn-outline-danger" type="button" id="btnDislike2"> Dislike </button>
         <output id="countDislikes2"> 0 </output>
-        <button class="btn btn-outline-warning" type="button" id="btnHaha2"> 😂HAHA </button>
+        <button class="btn btn-outline-warning" type="button" id="btnHaha2"> </button>
         <output id="countHaha2"> 0 </output> 
         <button class="btn btn-outline-danger" 
         <button class="btn btn-outline-danger"
-         type="button" id="btncare2"> 🥰care </button>
+         type="button" id="btncare2"></button>
         <output id="countcare2"> 0 </output>
-               <button class="btn btn-outline-warning" type="button" id="btnangry2"> 😡angry </button>
+               <button class="btn btn-outline-warning" type="button" id="btnangry2"> </button>
         <output id="countangry2"> 0 </output>
              </div>
              <div class="col-4"> Comments<br>
